# Copyright (c) 2013-2019 Huawei Technologies Co., Ltd. All rights reserved.
# Copyright (c) 2020-2021 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//build/lite/config/test.gni")
import("../config.gni")

common_include_dirs = [
  "//third_party/googletest/googletest/include",
  "//kernel/liteos_a/testsuites/unittest/fs/vfs",
  "//kernel/liteos_a/testsuites/unittest/fs/jffs",
  "../common/include",
]

sources_entry = [
  "../common/osTest.cpp",
  "jffs/vfs_jffs_test.cpp",
]

sources_smoke = [
  "jffs/smoke/It_vfs_jffs_001.cpp",
  "jffs/smoke/It_vfs_jffs_002.cpp",
  "jffs/smoke/It_vfs_jffs_003.cpp",
  "jffs/smoke/It_vfs_jffs_005.cpp",
  "jffs/smoke/It_vfs_jffs_021.cpp",
  "jffs/smoke/It_vfs_jffs_022.cpp",
  "jffs/smoke/It_vfs_jffs_026.cpp",
  "jffs/smoke/It_vfs_jffs_027.cpp",
  "jffs/smoke/It_vfs_jffs_034.cpp",
  "jffs/smoke/It_vfs_jffs_035.cpp",
  "jffs/smoke/It_vfs_jffs_094.cpp",
  "jffs/smoke/It_vfs_jffs_095.cpp",
  "jffs/smoke/It_vfs_jffs_103.cpp",
  "jffs/smoke/It_vfs_jffs_535.cpp",
  "jffs/smoke/It_vfs_jffs_Dac_001.cpp",
]

sources_pressure = [
  "jffs/pressure/It_fs_jffs_performance_001.cpp",
  "jffs/pressure/It_fs_jffs_performance_002.cpp",
  "jffs/pressure/It_fs_jffs_performance_003.cpp",
  "jffs/pressure/It_fs_jffs_performance_004.cpp",
  "jffs/pressure/It_fs_jffs_performance_005.cpp",
  "jffs/pressure/It_fs_jffs_performance_006.cpp",
  "jffs/pressure/It_fs_jffs_performance_007.cpp",
  "jffs/pressure/It_fs_jffs_performance_008.cpp",
  "jffs/pressure/It_fs_jffs_performance_009.cpp",
  "jffs/pressure/It_fs_jffs_performance_010.cpp",
  "jffs/pressure/It_fs_jffs_performance_011.cpp",
  "jffs/pressure/It_fs_jffs_performance_012.cpp",
  "jffs/pressure/It_fs_jffs_performance_013.cpp",
  "jffs/pressure/It_fs_jffs_pressure_001.cpp",
  "jffs/pressure/It_fs_jffs_pressure_002.cpp",
  "jffs/pressure/It_fs_jffs_pressure_003.cpp",
  "jffs/pressure/It_fs_jffs_pressure_004.cpp",
  "jffs/pressure/It_fs_jffs_pressure_005.cpp",
  "jffs/pressure/It_fs_jffs_pressure_006.cpp",
  "jffs/pressure/It_fs_jffs_pressure_007.cpp",
  "jffs/pressure/It_fs_jffs_pressure_008.cpp",
  "jffs/pressure/It_fs_jffs_pressure_009.cpp",
  "jffs/pressure/It_fs_jffs_pressure_010.cpp",
  "jffs/pressure/It_fs_jffs_pressure_011.cpp",
  "jffs/pressure/It_fs_jffs_pressure_012.cpp",
  "jffs/pressure/It_fs_jffs_pressure_014.cpp",
  "jffs/pressure/It_fs_jffs_pressure_015.cpp",
  "jffs/pressure/It_fs_jffs_pressure_016.cpp",
  "jffs/pressure/It_fs_jffs_pressure_017.cpp",
  "jffs/pressure/It_fs_jffs_pressure_018.cpp",
  "jffs/pressure/It_fs_jffs_pressure_019.cpp",
  "jffs/pressure/It_fs_jffs_pressure_020.cpp",
  "jffs/pressure/It_fs_jffs_pressure_021.cpp",
  "jffs/pressure/It_fs_jffs_pressure_022.cpp",
  "jffs/pressure/It_fs_jffs_pressure_023.cpp",
  "jffs/pressure/It_fs_jffs_pressure_024.cpp",
  "jffs/pressure/It_fs_jffs_pressure_025.cpp",
  "jffs/pressure/It_fs_jffs_pressure_026.cpp",
  "jffs/pressure/It_fs_jffs_pressure_027.cpp",
  "jffs/pressure/It_fs_jffs_pressure_028.cpp",
  "jffs/pressure/It_fs_jffs_pressure_029.cpp",
  "jffs/pressure/It_fs_jffs_pressure_030.cpp",
  "jffs/pressure/It_fs_jffs_pressure_031.cpp",
  "jffs/pressure/It_fs_jffs_pressure_032.cpp",
  "jffs/pressure/It_fs_jffs_pressure_033.cpp",
  "jffs/pressure/It_fs_jffs_pressure_034.cpp",
  "jffs/pressure/It_fs_jffs_pressure_035.cpp",
  "jffs/pressure/It_fs_jffs_pressure_036.cpp",
  "jffs/pressure/It_fs_jffs_pressure_037.cpp",
  "jffs/pressure/It_fs_jffs_pressure_038.cpp",
  "jffs/pressure/It_fs_jffs_pressure_039.cpp",
  "jffs/pressure/It_fs_jffs_pressure_040.cpp",
  "jffs/pressure/It_fs_jffs_pressure_041.cpp",
  "jffs/pressure/It_fs_jffs_pressure_042.cpp",
  "jffs/pressure/It_fs_jffs_pressure_043.cpp",
  "jffs/pressure/It_fs_jffs_pressure_044.cpp",
  "jffs/pressure/It_fs_jffs_pressure_045.cpp",
  "jffs/pressure/It_fs_jffs_pressure_046.cpp",
  "jffs/pressure/It_fs_jffs_pressure_047.cpp",
  "jffs/pressure/It_fs_jffs_pressure_048.cpp",
  "jffs/pressure/It_fs_jffs_pressure_049.cpp",
  "jffs/pressure/It_fs_jffs_pressure_050.cpp",
  "jffs/pressure/It_fs_jffs_pressure_051.cpp",
  "jffs/pressure/It_fs_jffs_pressure_052.cpp",
  "jffs/pressure/It_fs_jffs_pressure_053.cpp",
  "jffs/pressure/It_fs_jffs_pressure_301.cpp",
  "jffs/pressure/It_fs_jffs_pressure_302.cpp",
  "jffs/pressure/It_fs_jffs_pressure_303.cpp",
  "jffs/pressure/It_fs_jffs_pressure_304.cpp",
  "jffs/pressure/It_fs_jffs_pressure_305.cpp",
  "jffs/pressure/It_fs_jffs_pressure_306.cpp",
  "jffs/pressure/It_fs_jffs_pressure_307.cpp",
  "jffs/pressure/It_fs_jffs_pressure_308.cpp",
  "jffs/pressure/It_fs_jffs_pressure_309.cpp",
  "jffs/pressure/It_fs_jffs_pressure_310.cpp",
  "jffs/pressure/It_fs_jffs_pressure_311.cpp",
  "jffs/pressure/It_fs_jffs_pressure_312.cpp",
  "jffs/pressure/It_fs_jffs_pressure_313.cpp",
  "jffs/pressure/It_fs_jffs_pressure_314.cpp",
  "jffs/pressure/It_fs_jffs_pressure_315.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_001.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_002.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_003.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_004.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_005.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_006.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_007.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_008.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_009.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_010.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_011.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_012.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_013.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_014.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_015.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_016.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_017.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_018.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_019.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_020.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_021.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_022.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_023.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_024.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_025.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_026.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_027.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_028.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_029.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_030.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_031.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_032.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_033.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_034.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_035.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_036.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_037.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_038.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_039.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_040.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_041.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_042.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_043.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_044.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_045.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_046.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_047.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_048.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_049.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_050.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_051.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_052.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_053.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_054.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_055.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_056.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_057.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_058.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_059.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_060.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_061.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_062.cpp",
  "jffs/pressure/It_vfs_jffs_multipthread_063.cpp",
]

sources_full = [
  "jffs/full/It_test_faccessat_001.cpp",
  "jffs/full/It_test_faccessat_002.cpp",
  "jffs/full/It_test_fstatat_001.cpp",
  "jffs/full/It_test_fstatat_002.cpp",
  "jffs/full/It_test_fstatfs_001.cpp",
  "jffs/full/It_test_fstatfs_002.cpp",
  "jffs/full/it_test_fs_jffs_001.cpp",
  "jffs/full/it_test_fs_jffs_002.cpp",
  "jffs/full/it_test_fs_jffs_003.cpp",
  "jffs/full/it_test_fs_jffs_004.cpp",
  "jffs/full/it_test_fs_jffs_100.cpp",
  "jffs/full/it_test_fs_jffs_101.cpp",
  "jffs/full/it_test_fs_jffs_106.cpp",
  "jffs/full/it_test_fs_jffs_112.cpp",
  "jffs/full/it_test_fs_jffs_113.cpp",
  "jffs/full/It_jffs_001.cpp",
  "jffs/full/It_jffs_002.cpp",
  "jffs/full/It_jffs_003.cpp",
  "jffs/full/It_jffs_004.cpp",
  "jffs/full/It_jffs_005.cpp",
  "jffs/full/It_jffs_006.cpp",
  "jffs/full/It_jffs_007.cpp",
  "jffs/full/It_jffs_008.cpp",
  "jffs/full/It_jffs_009.cpp",
  "jffs/full/It_jffs_010.cpp",
  "jffs/full/It_jffs_011.cpp",
  "jffs/full/It_jffs_012.cpp",
  "jffs/full/It_jffs_013.cpp",
  "jffs/full/It_jffs_014.cpp",
  "jffs/full/It_jffs_015.cpp",
  "jffs/full/It_jffs_016.cpp",
  "jffs/full/It_jffs_017.cpp",
  "jffs/full/It_jffs_018.cpp",
  "jffs/full/It_jffs_019.cpp",
  "jffs/full/It_jffs_020.cpp",
  "jffs/full/It_jffs_021.cpp",
  "jffs/full/It_jffs_022.cpp",
  "jffs/full/It_jffs_023.cpp",
  "jffs/full/It_jffs_024.cpp",
  "jffs/full/It_jffs_025.cpp",
  "jffs/full/It_jffs_026.cpp",
  "jffs/full/It_jffs_027.cpp",
  "jffs/full/It_jffs_028.cpp",
  "jffs/full/It_jffs_029.cpp",
  "jffs/full/It_jffs_030.cpp",
  "jffs/full/It_jffs_031.cpp",
  "jffs/full/It_jffs_032.cpp",
  "jffs/full/It_jffs_033.cpp",
  "jffs/full/It_jffs_034.cpp",
  "jffs/full/It_jffs_035.cpp",
  "jffs/full/It_jffs_036.cpp",
  "jffs/full/It_jffs_037.cpp",
  "jffs/full/It_jffs_038.cpp",
  "jffs/full/It_jffs_039.cpp",
  "jffs/full/It_jffs_040.cpp",
  "jffs/full/It_jffs_041.cpp",
  "jffs/full/It_jffs_042.cpp",
  "jffs/full/It_jffs_043.cpp",
  "jffs/full/It_jffs_044.cpp",
  "jffs/full/It_vfs_jffs_004.cpp",
  "jffs/full/It_vfs_jffs_006.cpp",
  "jffs/full/It_vfs_jffs_007.cpp",
  "jffs/full/It_vfs_jffs_008.cpp",
  "jffs/full/It_vfs_jffs_009.cpp",
  "jffs/full/It_vfs_jffs_010.cpp",
  "jffs/full/It_vfs_jffs_011.cpp",
  "jffs/full/It_vfs_jffs_012.cpp",
  "jffs/full/It_vfs_jffs_013.cpp",
  "jffs/full/It_vfs_jffs_014.cpp",
  "jffs/full/It_vfs_jffs_015.cpp",
  "jffs/full/It_vfs_jffs_016.cpp",
  "jffs/full/It_vfs_jffs_017.cpp",
  "jffs/full/It_vfs_jffs_018.cpp",
  "jffs/full/It_vfs_jffs_019.cpp",
  "jffs/full/It_vfs_jffs_020.cpp",
  "jffs/full/It_vfs_jffs_023.cpp",
  "jffs/full/It_vfs_jffs_024.cpp",
  "jffs/full/It_vfs_jffs_025.cpp",
  "jffs/full/It_vfs_jffs_028.cpp",
  "jffs/full/It_vfs_jffs_029.cpp",
  "jffs/full/It_vfs_jffs_030.cpp",
  "jffs/full/It_vfs_jffs_031.cpp",
  "jffs/full/It_vfs_jffs_032.cpp",
  "jffs/full/It_vfs_jffs_033.cpp",
  "jffs/full/It_vfs_jffs_037.cpp",
  "jffs/full/It_vfs_jffs_038.cpp",
  "jffs/full/It_vfs_jffs_039.cpp",
  "jffs/full/It_vfs_jffs_040.cpp",
  "jffs/full/It_vfs_jffs_041.cpp",
  "jffs/full/It_vfs_jffs_042.cpp",
  "jffs/full/It_vfs_jffs_043.cpp",
  "jffs/full/It_vfs_jffs_044.cpp",
  "jffs/full/It_vfs_jffs_045.cpp",
  "jffs/full/It_vfs_jffs_046.cpp",
  "jffs/full/It_vfs_jffs_048.cpp",
  "jffs/full/It_vfs_jffs_049.cpp",
  "jffs/full/It_vfs_jffs_050.cpp",
  "jffs/full/It_vfs_jffs_051.cpp",
  "jffs/full/It_vfs_jffs_053.cpp",
  "jffs/full/It_vfs_jffs_055.cpp",
  "jffs/full/It_vfs_jffs_056.cpp",
  "jffs/full/It_vfs_jffs_057.cpp",
  "jffs/full/It_vfs_jffs_058.cpp",
  "jffs/full/It_vfs_jffs_059.cpp",
  "jffs/full/It_vfs_jffs_060.cpp",
  "jffs/full/It_vfs_jffs_061.cpp",
  "jffs/full/It_vfs_jffs_062.cpp",
  "jffs/full/It_vfs_jffs_063.cpp",
  "jffs/full/It_vfs_jffs_064.cpp",
  "jffs/full/It_vfs_jffs_065.cpp",
  "jffs/full/It_vfs_jffs_066.cpp",
  "jffs/full/It_vfs_jffs_067.cpp",
  "jffs/full/It_vfs_jffs_068.cpp",
  "jffs/full/It_vfs_jffs_069.cpp",
  "jffs/full/It_vfs_jffs_070.cpp",
  "jffs/full/It_vfs_jffs_071.cpp",
  "jffs/full/It_vfs_jffs_072.cpp",
  "jffs/full/It_vfs_jffs_073.cpp",
  "jffs/full/It_vfs_jffs_074.cpp",
  "jffs/full/It_vfs_jffs_076.cpp",
  "jffs/full/It_vfs_jffs_077.cpp",
  "jffs/full/It_vfs_jffs_078.cpp",
  "jffs/full/It_vfs_jffs_079.cpp",
  "jffs/full/It_vfs_jffs_080.cpp",
  "jffs/full/It_vfs_jffs_081.cpp",
  "jffs/full/It_vfs_jffs_082.cpp",
  "jffs/full/It_vfs_jffs_083.cpp",
  "jffs/full/It_vfs_jffs_084.cpp",
  "jffs/full/It_vfs_jffs_085.cpp",
  "jffs/full/It_vfs_jffs_086.cpp",
  "jffs/full/It_vfs_jffs_088.cpp",
  "jffs/full/It_vfs_jffs_090.cpp",
  "jffs/full/It_vfs_jffs_092.cpp",
  "jffs/full/It_vfs_jffs_093.cpp",
  "jffs/full/It_vfs_jffs_096.cpp",
  "jffs/full/It_vfs_jffs_097.cpp",
  "jffs/full/It_vfs_jffs_099.cpp",
  "jffs/full/It_vfs_jffs_100.cpp",
  "jffs/full/It_vfs_jffs_101.cpp",
  "jffs/full/It_vfs_jffs_102.cpp",
  "jffs/full/It_vfs_jffs_104.cpp",
  "jffs/full/It_vfs_jffs_105.cpp",
  "jffs/full/It_vfs_jffs_106.cpp",
  "jffs/full/It_vfs_jffs_107.cpp",
  "jffs/full/It_vfs_jffs_116.cpp",
  "jffs/full/It_vfs_jffs_117.cpp",
  "jffs/full/It_vfs_jffs_118.cpp",
  "jffs/full/It_vfs_jffs_119.cpp",
  "jffs/full/It_vfs_jffs_120.cpp",
  "jffs/full/It_vfs_jffs_121.cpp",
  "jffs/full/It_vfs_jffs_122.cpp",
  "jffs/full/It_vfs_jffs_123.cpp",
  "jffs/full/It_vfs_jffs_124.cpp",
  "jffs/full/It_vfs_jffs_125.cpp",
  "jffs/full/It_vfs_jffs_126.cpp",
  "jffs/full/It_vfs_jffs_127.cpp",
  "jffs/full/It_vfs_jffs_128.cpp",
  "jffs/full/It_vfs_jffs_129.cpp",
  "jffs/full/It_vfs_jffs_130.cpp",
  "jffs/full/It_vfs_jffs_131.cpp",
  "jffs/full/It_vfs_jffs_132.cpp",
  "jffs/full/It_vfs_jffs_133.cpp",
  "jffs/full/It_vfs_jffs_134.cpp",
  "jffs/full/It_vfs_jffs_135.cpp",
  "jffs/full/It_vfs_jffs_136.cpp",
  "jffs/full/It_vfs_jffs_137.cpp",
  "jffs/full/It_vfs_jffs_138.cpp",
  "jffs/full/It_vfs_jffs_139.cpp",
  "jffs/full/It_vfs_jffs_140.cpp",
  "jffs/full/It_vfs_jffs_141.cpp",
  "jffs/full/It_vfs_jffs_142.cpp",
  "jffs/full/It_vfs_jffs_143.cpp",
  "jffs/full/It_vfs_jffs_144.cpp",
  "jffs/full/It_vfs_jffs_145.cpp",
  "jffs/full/It_vfs_jffs_146.cpp",
  "jffs/full/It_vfs_jffs_147.cpp",
  "jffs/full/It_vfs_jffs_148.cpp",
  "jffs/full/It_vfs_jffs_149.cpp",
  "jffs/full/It_vfs_jffs_150.cpp",
  "jffs/full/It_vfs_jffs_151.cpp",
  "jffs/full/It_vfs_jffs_152.cpp",
  "jffs/full/It_vfs_jffs_153.cpp",
  "jffs/full/It_vfs_jffs_154.cpp",
  "jffs/full/It_vfs_jffs_155.cpp",
  "jffs/full/It_vfs_jffs_156.cpp",
  "jffs/full/It_vfs_jffs_157.cpp",
  "jffs/full/It_vfs_jffs_158.cpp",
  "jffs/full/It_vfs_jffs_159.cpp",
  "jffs/full/It_vfs_jffs_160.cpp",
  "jffs/full/It_vfs_jffs_161.cpp",
  "jffs/full/It_vfs_jffs_162.cpp",
  "jffs/full/It_vfs_jffs_163.cpp",
  "jffs/full/It_vfs_jffs_164.cpp",
  "jffs/full/It_vfs_jffs_165.cpp",
  "jffs/full/It_vfs_jffs_166.cpp",
  "jffs/full/It_vfs_jffs_167.cpp",
  "jffs/full/It_vfs_jffs_168.cpp",
  "jffs/full/It_vfs_jffs_169.cpp",
  "jffs/full/It_vfs_jffs_170.cpp",
  "jffs/full/It_vfs_jffs_171.cpp",
  "jffs/full/It_vfs_jffs_172.cpp",
  "jffs/full/It_vfs_jffs_173.cpp",
  "jffs/full/It_vfs_jffs_174.cpp",
  "jffs/full/It_vfs_jffs_175.cpp",
  "jffs/full/It_vfs_jffs_176.cpp",
  "jffs/full/It_vfs_jffs_177.cpp",
  "jffs/full/It_vfs_jffs_178.cpp",
  "jffs/full/It_vfs_jffs_179.cpp",
  "jffs/full/It_vfs_jffs_180.cpp",
  "jffs/full/It_vfs_jffs_182.cpp",
  "jffs/full/It_vfs_jffs_183.cpp",
  "jffs/full/It_vfs_jffs_184.cpp",
  "jffs/full/It_vfs_jffs_185.cpp",
  "jffs/full/It_vfs_jffs_187.cpp",
  "jffs/full/It_vfs_jffs_188.cpp",
  "jffs/full/It_vfs_jffs_189.cpp",
  "jffs/full/It_vfs_jffs_190.cpp",
  "jffs/full/It_vfs_jffs_191.cpp",
  "jffs/full/It_vfs_jffs_192.cpp",
  "jffs/full/It_vfs_jffs_193.cpp",
  "jffs/full/It_vfs_jffs_194.cpp",
  "jffs/full/It_vfs_jffs_195.cpp",
  "jffs/full/It_vfs_jffs_196.cpp",
  "jffs/full/It_vfs_jffs_197.cpp",
  "jffs/full/It_vfs_jffs_198.cpp",
  "jffs/full/It_vfs_jffs_199.cpp",
  "jffs/full/It_vfs_jffs_200.cpp",
  "jffs/full/It_vfs_jffs_201.cpp",
  "jffs/full/It_vfs_jffs_202.cpp",
  "jffs/full/It_vfs_jffs_203.cpp",
  "jffs/full/It_vfs_jffs_204.cpp",
  "jffs/full/It_vfs_jffs_205.cpp",
  "jffs/full/It_vfs_jffs_206.cpp",
  "jffs/full/It_vfs_jffs_207.cpp",
  "jffs/full/It_vfs_jffs_208.cpp",
  "jffs/full/It_vfs_jffs_209.cpp",
  "jffs/full/It_vfs_jffs_210.cpp",
  "jffs/full/It_vfs_jffs_211.cpp",
  "jffs/full/It_vfs_jffs_212.cpp",
  "jffs/full/It_vfs_jffs_213.cpp",
  "jffs/full/It_vfs_jffs_214.cpp",
  "jffs/full/It_vfs_jffs_215.cpp",
  "jffs/full/It_vfs_jffs_216.cpp",
  "jffs/full/It_vfs_jffs_217.cpp",
  "jffs/full/It_vfs_jffs_218.cpp",
  "jffs/full/It_vfs_jffs_219.cpp",
  "jffs/full/It_vfs_jffs_220.cpp",
  "jffs/full/It_vfs_jffs_221.cpp",
  "jffs/full/It_vfs_jffs_222.cpp",
  "jffs/full/It_vfs_jffs_223.cpp",
  "jffs/full/It_vfs_jffs_224.cpp",
  "jffs/full/It_vfs_jffs_225.cpp",
  "jffs/full/It_vfs_jffs_226.cpp",
  "jffs/full/It_vfs_jffs_227.cpp",
  "jffs/full/It_vfs_jffs_228.cpp",
  "jffs/full/It_vfs_jffs_229.cpp",
  "jffs/full/It_vfs_jffs_230.cpp",
  "jffs/full/It_vfs_jffs_231.cpp",
  "jffs/full/It_vfs_jffs_232.cpp",
  "jffs/full/It_vfs_jffs_233.cpp",
  "jffs/full/It_vfs_jffs_234.cpp",
  "jffs/full/It_vfs_jffs_235.cpp",
  "jffs/full/It_vfs_jffs_236.cpp",
  "jffs/full/It_vfs_jffs_237.cpp",
  "jffs/full/It_vfs_jffs_238.cpp",
  "jffs/full/It_vfs_jffs_239.cpp",
  "jffs/full/It_vfs_jffs_240.cpp",
  "jffs/full/It_vfs_jffs_241.cpp",
  "jffs/full/It_vfs_jffs_242.cpp",
  "jffs/full/It_vfs_jffs_243.cpp",
  "jffs/full/It_vfs_jffs_244.cpp",
  "jffs/full/It_vfs_jffs_245.cpp",
  "jffs/full/It_vfs_jffs_246.cpp",
  "jffs/full/It_vfs_jffs_247.cpp",
  "jffs/full/It_vfs_jffs_248.cpp",
  "jffs/full/It_vfs_jffs_249.cpp",
  "jffs/full/It_vfs_jffs_250.cpp",
  "jffs/full/It_vfs_jffs_251.cpp",
  "jffs/full/It_vfs_jffs_252.cpp",
  "jffs/full/It_vfs_jffs_253.cpp",
  "jffs/full/It_vfs_jffs_254.cpp",
  "jffs/full/It_vfs_jffs_255.cpp",
  "jffs/full/It_vfs_jffs_256.cpp",
  "jffs/full/It_vfs_jffs_257.cpp",
  "jffs/full/It_vfs_jffs_258.cpp",
  "jffs/full/It_vfs_jffs_259.cpp",
  "jffs/full/It_vfs_jffs_260.cpp",
  "jffs/full/It_vfs_jffs_261.cpp",
  "jffs/full/It_vfs_jffs_262.cpp",
  "jffs/full/It_vfs_jffs_263.cpp",
  "jffs/full/It_vfs_jffs_264.cpp",
  "jffs/full/It_vfs_jffs_265.cpp",
  "jffs/full/It_vfs_jffs_266.cpp",
  "jffs/full/It_vfs_jffs_267.cpp",
  "jffs/full/It_vfs_jffs_268.cpp",
  "jffs/full/It_vfs_jffs_269.cpp",
  "jffs/full/It_vfs_jffs_270.cpp",
  "jffs/full/It_vfs_jffs_271.cpp",
  "jffs/full/It_vfs_jffs_272.cpp",
  "jffs/full/It_vfs_jffs_273.cpp",
  "jffs/full/It_vfs_jffs_274.cpp",
  "jffs/full/It_vfs_jffs_275.cpp",
  "jffs/full/It_vfs_jffs_276.cpp",
  "jffs/full/It_vfs_jffs_277.cpp",
  "jffs/full/It_vfs_jffs_278.cpp",
  "jffs/full/It_vfs_jffs_279.cpp",
  "jffs/full/It_vfs_jffs_280.cpp",
  "jffs/full/It_vfs_jffs_281.cpp",
  "jffs/full/It_vfs_jffs_282.cpp",
  "jffs/full/It_vfs_jffs_283.cpp",
  "jffs/full/It_vfs_jffs_284.cpp",
  "jffs/full/It_vfs_jffs_285.cpp",
  "jffs/full/It_vfs_jffs_286.cpp",
  "jffs/full/It_vfs_jffs_287.cpp",
  "jffs/full/It_vfs_jffs_288.cpp",
  "jffs/full/It_vfs_jffs_289.cpp",
  "jffs/full/It_vfs_jffs_290.cpp",
  "jffs/full/It_vfs_jffs_291.cpp",
  "jffs/full/It_vfs_jffs_292.cpp",
  "jffs/full/It_vfs_jffs_293.cpp",
  "jffs/full/It_vfs_jffs_294.cpp",
  "jffs/full/It_vfs_jffs_295.cpp",
  "jffs/full/It_vfs_jffs_296.cpp",
  "jffs/full/It_vfs_jffs_297.cpp",
  "jffs/full/It_vfs_jffs_298.cpp",
  "jffs/full/It_vfs_jffs_299.cpp",
  "jffs/full/It_vfs_jffs_300.cpp",
  "jffs/full/It_vfs_jffs_301.cpp",
  "jffs/full/It_vfs_jffs_302.cpp",
  "jffs/full/It_vfs_jffs_303.cpp",
  "jffs/full/It_vfs_jffs_304.cpp",
  "jffs/full/It_vfs_jffs_305.cpp",
  "jffs/full/It_vfs_jffs_306.cpp",
  "jffs/full/It_vfs_jffs_307.cpp",
  "jffs/full/It_vfs_jffs_308.cpp",
  "jffs/full/It_vfs_jffs_309.cpp",
  "jffs/full/It_vfs_jffs_310.cpp",
  "jffs/full/It_vfs_jffs_311.cpp",
  "jffs/full/It_vfs_jffs_312.cpp",
  "jffs/full/It_vfs_jffs_313.cpp",
  "jffs/full/It_vfs_jffs_314.cpp",
  "jffs/full/It_vfs_jffs_315.cpp",
  "jffs/full/It_vfs_jffs_316.cpp",
  "jffs/full/It_vfs_jffs_317.cpp",
  "jffs/full/It_vfs_jffs_318.cpp",
  "jffs/full/It_vfs_jffs_319.cpp",
  "jffs/full/It_vfs_jffs_320.cpp",
  "jffs/full/It_vfs_jffs_321.cpp",
  "jffs/full/It_vfs_jffs_322.cpp",
  "jffs/full/It_vfs_jffs_323.cpp",
  "jffs/full/It_vfs_jffs_324.cpp",
  "jffs/full/It_vfs_jffs_325.cpp",
  "jffs/full/It_vfs_jffs_326.cpp",
  "jffs/full/It_vfs_jffs_327.cpp",
  "jffs/full/It_vfs_jffs_328.cpp",
  "jffs/full/It_vfs_jffs_329.cpp",
  "jffs/full/It_vfs_jffs_330.cpp",
  "jffs/full/It_vfs_jffs_331.cpp",
  "jffs/full/It_vfs_jffs_332.cpp",
  "jffs/full/It_vfs_jffs_333.cpp",
  "jffs/full/It_vfs_jffs_334.cpp",
  "jffs/full/It_vfs_jffs_335.cpp",
  "jffs/full/It_vfs_jffs_336.cpp",
  "jffs/full/It_vfs_jffs_337.cpp",
  "jffs/full/It_vfs_jffs_338.cpp",
  "jffs/full/It_vfs_jffs_339.cpp",
  "jffs/full/It_vfs_jffs_340.cpp",
  "jffs/full/It_vfs_jffs_342.cpp",
  "jffs/full/It_vfs_jffs_343.cpp",
  "jffs/full/It_vfs_jffs_344.cpp",
  "jffs/full/It_vfs_jffs_346.cpp",
  "jffs/full/It_vfs_jffs_352.cpp",
  "jffs/full/It_vfs_jffs_353.cpp",
  "jffs/full/It_vfs_jffs_354.cpp",
  "jffs/full/It_vfs_jffs_355.cpp",
  "jffs/full/It_vfs_jffs_356.cpp",
  "jffs/full/It_vfs_jffs_357.cpp",
  "jffs/full/It_vfs_jffs_358.cpp",
  "jffs/full/It_vfs_jffs_359.cpp",
  "jffs/full/It_vfs_jffs_360.cpp",
  "jffs/full/It_vfs_jffs_361.cpp",
  "jffs/full/It_vfs_jffs_362.cpp",
  "jffs/full/It_vfs_jffs_364.cpp",
  "jffs/full/It_vfs_jffs_365.cpp",
  "jffs/full/It_vfs_jffs_366.cpp",
  "jffs/full/It_vfs_jffs_367.cpp",
  "jffs/full/It_vfs_jffs_368.cpp",
  "jffs/full/It_vfs_jffs_369.cpp",
  "jffs/full/It_vfs_jffs_370.cpp",
  "jffs/full/It_vfs_jffs_371.cpp",
  "jffs/full/It_vfs_jffs_372.cpp",
  "jffs/full/It_vfs_jffs_373.cpp",
  "jffs/full/It_vfs_jffs_374.cpp",
  "jffs/full/It_vfs_jffs_375.cpp",
  "jffs/full/It_vfs_jffs_376.cpp",
  "jffs/full/It_vfs_jffs_377.cpp",
  "jffs/full/It_vfs_jffs_378.cpp",
  "jffs/full/It_vfs_jffs_379.cpp",
  "jffs/full/It_vfs_jffs_380.cpp",
  "jffs/full/It_vfs_jffs_381.cpp",
  "jffs/full/It_vfs_jffs_382.cpp",
  "jffs/full/It_vfs_jffs_383.cpp",
  "jffs/full/It_vfs_jffs_384.cpp",
  "jffs/full/It_vfs_jffs_385.cpp",
  "jffs/full/It_vfs_jffs_386.cpp",
  "jffs/full/It_vfs_jffs_387.cpp",
  "jffs/full/It_vfs_jffs_388.cpp",
  "jffs/full/It_vfs_jffs_389.cpp",
  "jffs/full/It_vfs_jffs_390.cpp",
  "jffs/full/It_vfs_jffs_391.cpp",
  "jffs/full/It_vfs_jffs_392.cpp",
  "jffs/full/It_vfs_jffs_393.cpp",
  "jffs/full/It_vfs_jffs_394.cpp",
  "jffs/full/It_vfs_jffs_395.cpp",
  "jffs/full/It_vfs_jffs_396.cpp",
  "jffs/full/It_vfs_jffs_397.cpp",
  "jffs/full/It_vfs_jffs_398.cpp",
  "jffs/full/It_vfs_jffs_399.cpp",
  "jffs/full/It_vfs_jffs_400.cpp",
  "jffs/full/It_vfs_jffs_401.cpp",
  "jffs/full/It_vfs_jffs_402.cpp",
  "jffs/full/It_vfs_jffs_403.cpp",
  "jffs/full/It_vfs_jffs_404.cpp",
  "jffs/full/It_vfs_jffs_405.cpp",
  "jffs/full/It_vfs_jffs_406.cpp",
  "jffs/full/It_vfs_jffs_407.cpp",
  "jffs/full/It_vfs_jffs_408.cpp",
  "jffs/full/It_vfs_jffs_409.cpp",
  "jffs/full/It_vfs_jffs_410.cpp",
  "jffs/full/It_vfs_jffs_411.cpp",
  "jffs/full/It_vfs_jffs_412.cpp",
  "jffs/full/It_vfs_jffs_413.cpp",
  "jffs/full/It_vfs_jffs_414.cpp",
  "jffs/full/It_vfs_jffs_415.cpp",
  "jffs/full/It_vfs_jffs_416.cpp",
  "jffs/full/It_vfs_jffs_417.cpp",
  "jffs/full/It_vfs_jffs_418.cpp",
  "jffs/full/It_vfs_jffs_419.cpp",
  "jffs/full/It_vfs_jffs_420.cpp",
  "jffs/full/It_vfs_jffs_421.cpp",
  "jffs/full/It_vfs_jffs_422.cpp",
  "jffs/full/It_vfs_jffs_423.cpp",
  "jffs/full/It_vfs_jffs_424.cpp",
  "jffs/full/It_vfs_jffs_425.cpp",
  "jffs/full/It_vfs_jffs_426.cpp",
  "jffs/full/It_vfs_jffs_427.cpp",
  "jffs/full/It_vfs_jffs_428.cpp",
  "jffs/full/It_vfs_jffs_429.cpp",
  "jffs/full/It_vfs_jffs_430.cpp",
  "jffs/full/It_vfs_jffs_431.cpp",
  "jffs/full/It_vfs_jffs_432.cpp",
  "jffs/full/It_vfs_jffs_433.cpp",
  "jffs/full/It_vfs_jffs_434.cpp",
  "jffs/full/It_vfs_jffs_435.cpp",
  "jffs/full/It_vfs_jffs_454.cpp",
  "jffs/full/It_vfs_jffs_455.cpp",
  "jffs/full/It_vfs_jffs_456.cpp",
  "jffs/full/It_vfs_jffs_457.cpp",
  "jffs/full/It_vfs_jffs_458.cpp",
  "jffs/full/It_vfs_jffs_459.cpp",
  "jffs/full/It_vfs_jffs_460.cpp",
  "jffs/full/It_vfs_jffs_461.cpp",
  "jffs/full/It_vfs_jffs_462.cpp",
  "jffs/full/It_vfs_jffs_487.cpp",
  "jffs/full/It_vfs_jffs_488.cpp",
  "jffs/full/It_vfs_jffs_489.cpp",
  "jffs/full/It_vfs_jffs_490.cpp",
  "jffs/full/It_vfs_jffs_491.cpp",
  "jffs/full/It_vfs_jffs_492.cpp",
  "jffs/full/It_vfs_jffs_493.cpp",
  "jffs/full/It_vfs_jffs_494.cpp",
  "jffs/full/It_vfs_jffs_495.cpp",
  "jffs/full/It_vfs_jffs_496.cpp",
  "jffs/full/It_vfs_jffs_497.cpp",
  "jffs/full/It_vfs_jffs_498.cpp",
  "jffs/full/It_vfs_jffs_499.cpp",
  "jffs/full/It_vfs_jffs_500.cpp",
  "jffs/full/It_vfs_jffs_501.cpp",
  "jffs/full/It_vfs_jffs_502.cpp",
  "jffs/full/It_vfs_jffs_503.cpp",
  "jffs/full/It_vfs_jffs_504.cpp",
  "jffs/full/It_vfs_jffs_505.cpp",
  "jffs/full/It_vfs_jffs_506.cpp",
  "jffs/full/It_vfs_jffs_507.cpp",
  "jffs/full/It_vfs_jffs_508.cpp",
  "jffs/full/It_vfs_jffs_509.cpp",
  "jffs/full/It_vfs_jffs_510.cpp",
  "jffs/full/It_vfs_jffs_511.cpp",
  "jffs/full/It_vfs_jffs_512.cpp",
  "jffs/full/It_vfs_jffs_513.cpp",
  "jffs/full/It_vfs_jffs_514.cpp",
  "jffs/full/It_vfs_jffs_515.cpp",
  "jffs/full/It_vfs_jffs_516.cpp",
  "jffs/full/It_vfs_jffs_517.cpp",
  "jffs/full/It_vfs_jffs_518.cpp",
  "jffs/full/It_vfs_jffs_519.cpp",
  "jffs/full/It_vfs_jffs_520.cpp",
  "jffs/full/It_vfs_jffs_521.cpp",
  "jffs/full/It_vfs_jffs_522.cpp",
  "jffs/full/It_vfs_jffs_523.cpp",
  "jffs/full/It_vfs_jffs_524.cpp",
  "jffs/full/It_vfs_jffs_526.cpp",
  "jffs/full/It_vfs_jffs_528.cpp",
  "jffs/full/It_vfs_jffs_529.cpp",
  "jffs/full/It_vfs_jffs_530.cpp",
  "jffs/full/It_vfs_jffs_531.cpp",
  "jffs/full/It_vfs_jffs_532.cpp",
  "jffs/full/It_vfs_jffs_533.cpp",
  "jffs/full/It_vfs_jffs_534.cpp",
  "jffs/full/It_vfs_jffs_541.cpp",
  "jffs/full/It_vfs_jffs_542.cpp",
  "jffs/full/It_vfs_jffs_543.cpp",
  "jffs/full/It_vfs_jffs_544.cpp",
  "jffs/full/It_vfs_jffs_545.cpp",
  "jffs/full/It_vfs_jffs_546.cpp",
  "jffs/full/It_vfs_jffs_547.cpp",
  "jffs/full/It_vfs_jffs_548.cpp",
  "jffs/full/It_vfs_jffs_549.cpp",
  "jffs/full/It_vfs_jffs_550.cpp",
  "jffs/full/It_vfs_jffs_551.cpp",
  "jffs/full/It_vfs_jffs_552.cpp",
  "jffs/full/It_vfs_jffs_553.cpp",
  "jffs/full/It_vfs_jffs_554.cpp",
  "jffs/full/It_vfs_jffs_555.cpp",
  "jffs/full/It_vfs_jffs_556.cpp",
  "jffs/full/It_vfs_jffs_557.cpp",
  "jffs/full/It_vfs_jffs_560.cpp",
  "jffs/full/It_vfs_jffs_562.cpp",
  "jffs/full/It_vfs_jffs_563.cpp",
  "jffs/full/It_vfs_jffs_564.cpp",
  "jffs/full/It_vfs_jffs_565.cpp",
  "jffs/full/It_vfs_jffs_566.cpp",
  "jffs/full/It_vfs_jffs_567.cpp",
  "jffs/full/It_vfs_jffs_568.cpp",
  "jffs/full/It_vfs_jffs_569.cpp",
  "jffs/full/It_vfs_jffs_570.cpp",
  "jffs/full/It_vfs_jffs_571.cpp",
  "jffs/full/It_vfs_jffs_572.cpp",
  "jffs/full/It_vfs_jffs_573.cpp",
  "jffs/full/It_vfs_jffs_574.cpp",
  "jffs/full/It_vfs_jffs_583.cpp",
  "jffs/full/It_vfs_jffs_584.cpp",
  "jffs/full/It_vfs_jffs_586.cpp",
  "jffs/full/It_vfs_jffs_589.cpp",
  "jffs/full/It_vfs_jffs_590.cpp",
  "jffs/full/It_vfs_jffs_591.cpp",
  "jffs/full/It_vfs_jffs_592.cpp",
  "jffs/full/It_vfs_jffs_593.cpp",
  "jffs/full/It_vfs_jffs_594.cpp",
  "jffs/full/It_vfs_jffs_595.cpp",
  "jffs/full/It_vfs_jffs_596.cpp",
  "jffs/full/It_vfs_jffs_603.cpp",
  "jffs/full/It_vfs_jffs_636.cpp",
  "jffs/full/It_vfs_jffs_643.cpp",
  "jffs/full/It_vfs_jffs_644.cpp",
  "jffs/full/It_vfs_jffs_645.cpp",
  "jffs/full/It_vfs_jffs_646.cpp",
  "jffs/full/It_vfs_jffs_648.cpp",
  "jffs/full/It_vfs_jffs_649.cpp",
  "jffs/full/It_vfs_jffs_650.cpp",
  "jffs/full/It_vfs_jffs_651.cpp",
  "jffs/full/It_vfs_jffs_652.cpp",
  "jffs/full/It_vfs_jffs_653.cpp",
  "jffs/full/It_vfs_jffs_654.cpp",
  "jffs/full/It_vfs_jffs_655.cpp",
  "jffs/full/It_vfs_jffs_656.cpp",
  "jffs/full/It_vfs_jffs_663.cpp",
  "jffs/full/It_vfs_jffs_664.cpp",
  "jffs/full/It_vfs_jffs_665.cpp",
  "jffs/full/It_vfs_jffs_666.cpp",
  "jffs/full/It_vfs_jffs_668.cpp",
  "jffs/full/It_vfs_jffs_669.cpp",
  "jffs/full/It_vfs_jffs_670.cpp",
  "jffs/full/It_vfs_jffs_671.cpp",
  "jffs/full/It_vfs_jffs_672.cpp",
  "jffs/full/It_vfs_jffs_673.cpp",
  "jffs/full/It_vfs_jffs_674.cpp",
  "jffs/full/It_vfs_jffs_675.cpp",
  "jffs/full/It_vfs_jffs_676.cpp",
  "jffs/full/It_vfs_jffs_690.cpp",
  "jffs/full/It_vfs_jffs_694.cpp",
  "jffs/full/It_vfs_jffs_696.cpp",
  "jffs/full/It_vfs_jffs_697.cpp",
  "jffs/full/It_vfs_jffs_700.cpp",
  "jffs/full/It_vfs_jffs_701.cpp",
  "jffs/full/It_vfs_jffs_807.cpp",
  "jffs/full/It_vfs_jffs_808.cpp",
  "jffs/full/It_vfs_test_link_001.cpp",
  "jffs/full/It_vfs_test_link_002.cpp",
  "jffs/full/It_vfs_test_link_003.cpp",
  "jffs/full/It_vfs_test_linkat_001.cpp",
  "jffs/full/It_vfs_test_linkat_002.cpp",
  "jffs/full/It_vfs_test_linkat_003.cpp",
  "jffs/full/It_vfs_test_readlink_001.cpp",
  "jffs/full/It_vfs_test_symlink_001.cpp",
  "jffs/full/It_vfs_test_symlink_002.cpp",
  "jffs/full/It_vfs_test_symlink_003.cpp",
  "jffs/full/It_vfs_test_symlinkat_001.cpp",
  "jffs/full/It_vfs_test_mount_rdonly_001.cpp",
  "jffs/full/It_vfs_test_mount_rdonly_002.cpp",
  "jffs/full/It_vfs_test_mount_rdonly_003.cpp",
]

if (LOSCFG_USER_TEST_LEVEL >= TEST_LEVEL_LOW) {
  unittest("liteos_a_fs_unittest_door") {
    output_extension = "bin"
    output_dir = "$root_out_dir/test/unittest/kernel"
    include_dirs = common_include_dirs
    sources = sources_entry
    sources += sources_smoke
    sources_full = []
    sources += sources_full
    sources_pressure = []
    sources += sources_pressure
    configs = [ "..:public_config_for_door" ]
    deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  }
}

if (LOSCFG_USER_TEST_LEVEL >= TEST_LEVEL_MIDDLE) {
  unittest("liteos_a_fs_unittest") {
    output_extension = "bin"
    output_dir = "$root_out_dir/test/unittest/kernel"
    include_dirs = common_include_dirs
    sources = sources_entry
    sources += sources_smoke
    sources += sources_full
    sources_pressure = []
    sources += sources_pressure
    configs = [ "..:public_config_for_all" ]
    deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  }
}

if (LOSCFG_USER_TEST_LEVEL >= TEST_LEVEL_HIGH) {
  unittest("liteos_a_fs_unittest_pressure") {
    output_extension = "bin"
    output_dir = "$root_out_dir/test/unittest/kernel"
    include_dirs = common_include_dirs
    sources = sources_entry
    sources_smoke = []
    sources += sources_smoke
    sources_full = []
    sources += sources_full
    sources += sources_pressure
    configs = [ "..:public_config_for_pressure" ]
    deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  }
}
